* string.c (str_nth_len): count ascii-only run at the end.  this   bug appears only when single-byte-optimization is disabled due   to unknown coderange.  [ruby-core:41896] [Bug #5836]

git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@34208 b2dd03c8-39d4-4d8f-98ff-823fe69b080e